Fixed contrast

--- a/lesson02/styles/styles.css
+++ b/lesson02/styles/styles.css
@@ -33,8 +33,8 @@ article p {
 }
 
 .callout {
-	color: #e8e8e8;
-	background-color: rgb(195, 70, 172);
+	color: #f5f5f5;
+	background-color: rgb(176, 64, 156);
     padding: 1rem;
 }
 
